ran with 30 features (removed large model files from git)

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,20 @@
 .venv
 .env
+
+# Model files (too large for git)
+*.pkl
+model/*.pkl
+
+# Python cache
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Jupyter Notebook checkpoints
+.ipynb_checkpoints
+
+# Environment variables
+.env
+.venv
+venv/
+ENV/
