--- a/demo/suricata-ids/Dockerfile
+++ b/demo/suricata-ids/Dockerfile
@@ -4,8 +4,8 @@ ENV DEBIAN_FRONTEND=noninteractive
 
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
-    python3 \
-    python3-pip \
+    software-properties-common \
+    suricata \
     apache2 \
     php \
     php-mysqli \
@@ -21,9 +21,6 @@ RUN apt-get update && apt-get install -y \
     supervisor \
     && rm -rf /var/lib/apt/lists/*
 
-# Install Python packages
-RUN pip3 install scapy pandas numpy scikit-learn
-
 # Clone DVWA
 WORKDIR /var/www/html
 RUN git clone https://github.com/digininja/DVWA.git dvwa
@@ -33,16 +30,29 @@ WORKDIR /var/www/html/dvwa
 RUN cp config/config.inc.php.dist config/config.inc.php && \
     sed -i "s/p@ssw0rd/password/g" config/config.inc.php && \
     sed -i "s/'impossible'/'low'/g" config/config.inc.php && \
-    chmod -R 777 /var/www/html/dvwa/hackable/uploads/ && \
-    chmod -R 777 /var/www/html/dvwa/external/phpids/0.6/lib/IDS/tmp/phpids_log.txt
+    chmod -R 777 /var/www/html/dvwa/hackable/uploads/
+
+# Create PHPIDS directory if it doesn't exist and set permissions
+RUN mkdir -p /var/www/html/dvwa/external/phpids/0.6/lib/IDS/tmp && \
+    touch /var/www/html/dvwa/external/phpids/0.6/lib/IDS/tmp/phpids_log.txt && \
+    chmod -R 777 /var/www/html/dvwa/external/phpids/0.6/lib/IDS/tmp/ || true
 
 # Configure Apache
 RUN echo "ServerName localhost" >> /etc/apache2/apache2.conf && \
     sed -i 's/AllowOverride None/AllowOverride All/g' /etc/apache2/apache2.conf
 
-# Copy ML-IDS scripts
-COPY ml_ids.py /opt/ml_ids.py
-COPY requirements.txt /opt/requirements.txt
+# Create Suricata directories
+RUN mkdir -p /var/log/suricata /etc/suricata/rules
+
+# Copy custom rules file
+COPY suricata-config/custom.rules /etc/suricata/rules/custom.rules
+
+# Copy Suricata configuration
+COPY suricata-config/suricata.yaml /etc/suricata/suricata.yaml
+
+# Set proper permissions
+RUN chmod 644 /etc/suricata/rules/custom.rules && \
+    chmod 644 /etc/suricata/suricata.yaml
 
 # Create supervisor config
 RUN echo '[supervisord]\n\
@@ -64,12 +74,12 @@ autorestart=true\n\
 stdout_logfile=/var/log/apache2-stdout.log\n\
 stderr_logfile=/var/log/apache2-stderr.log\n\
 \n\
-[program:ml-ids]\n\
-command=python3 /opt/ml_ids.py /app/models/model.pkl eth0\n\
+[program:suricata]\n\
+command=/usr/bin/suricata -c /etc/suricata/suricata.yaml -i eth0 -v\n\
 autostart=true\n\
 autorestart=true\n\
-stdout_logfile=/var/log/ml-ids-stdout.log\n\
-stderr_logfile=/var/log/ml-ids-stderr.log\n\
+stdout_logfile=/var/log/suricata-stdout.log\n\
+stderr_logfile=/var/log/suricata-stderr.log\n\
 ' > /etc/supervisor/conf.d/supervisord.conf
 
 # Create startup script
@@ -89,6 +99,16 @@ EOF\n\
 # Stop MySQL (supervisor will restart it)\n\
 service mysql stop\n\
 sleep 2\n\
+\n\
+# Test Suricata configuration\n\
+echo "Testing Suricata configuration..."\n\
+suricata -T -c /etc/suricata/suricata.yaml\n\
+if [ $? -ne 0 ]; then\n\
+    echo "ERROR: Suricata configuration test failed!"\n\
+    cat /var/log/suricata/suricata.log\n\
+    exit 1\n\
+fi\n\
+echo "Suricata configuration OK"\n\
 \n\
 # Start supervisor\n\
 /usr/bin/supervisord -c /etc/supervisor/conf.d/supervisord.conf\n\
