--- a/demo/suricata-ids/Dockerfile
+++ b/demo/suricata-ids/Dockerfile
@@ -46,8 +46,14 @@ RUN mkdir -p /var/www/html/dvwa/external/phpids/0.6/lib/IDS/tmp && \
 RUN echo "ServerName localhost" >> /etc/apache2/apache2.conf && \
     sed -i 's/AllowOverride None/AllowOverride All/g' /etc/apache2/apache2.conf
 
-# Create Suricata directories
-RUN mkdir -p /var/log/suricata /etc/suricata/rules
+# Create required directories for logs and services
+RUN mkdir -p /var/log/suricata /etc/suricata/rules /var/log/supervisor /var/run/mysqld /var/log/apache2 && \
+    chown mysql:mysql /var/run/mysqld && \
+    chown www-data:www-data /var/log/apache2
+
+# Fix git ownership issues for DVWA
+RUN git config --global --add safe.directory /var/www/html/dvwa && \
+    chown -R www-data:www-data /var/www/html/dvwa
 
 # Copy your custom rules file
 COPY suricata-config/custom.rules /etc/suricata/rules/custom.rules
@@ -93,28 +99,50 @@ stderr_logfile=/var/log/suricata-stderr.log\n\
 
 # Create startup script
 RUN echo '#!/bin/bash\n\
+set -e\n\
+\n\
 echo "Starting Suricata IDS Container..."\n\
 echo "Suricata version: $(suricata --version)"\n\
 \n\
-# Start MySQL and wait for it to be ready\n\
-service mysql start\n\
-sleep 10\n\
+# Initialize MySQL data directory if needed\n\
+if [ ! -d "/var/lib/mysql/mysql" ]; then\n\
+    echo "Initializing MySQL data directory..."\n\
+    mysql_install_db --user=mysql --datadir=/var/lib/mysql\n\
+fi\n\
+\n\
+# Start MySQL directly\n\
+echo "Starting MySQL..."\n\
+mysqld_safe --user=mysql &\n\
+MYSQL_PID=$!\n\
+\n\
+# Wait for MySQL to be ready\n\
+echo "Waiting for MySQL to be ready..."\n\
+for i in {1..30}; do\n\
+    if mysqladmin ping -u root --silent 2>/dev/null; then\n\
+        echo "MySQL is ready"\n\
+        break\n\
+    fi\n\
+    echo "Waiting for MySQL... ($i/30)"\n\
+    sleep 1\n\
+done\n\
 \n\
 # Setup DVWA database\n\
+echo "Setting up DVWA database..."\n\
 mysql -u root << EOF\n\
 CREATE DATABASE IF NOT EXISTS dvwa;\n\
-CREATE USER IF NOT EXISTS "dvwa"@"localhost" IDENTIFIED BY "password";\n\
-GRANT ALL PRIVILEGES ON dvwa.* TO "dvwa"@"localhost";\n\
+CREATE USER IF NOT EXISTS '"'"'dvwa'"'"'@'"'"'localhost'"'"' IDENTIFIED BY '"'"'password'"'"';\n\
+GRANT ALL PRIVILEGES ON dvwa.* TO '"'"'dvwa'"'"'@'"'"'localhost'"'"';\n\
 FLUSH PRIVILEGES;\n\
 EOF\n\
 \n\
-echo "MySQL database created"\n\
+echo "Database setup complete"\n\
 \n\
-# Stop MySQL (supervisor will restart it)\n\
-service mysql stop\n\
+# Kill the temporary MySQL process\n\
+kill $MYSQL_PID\n\
+wait $MYSQL_PID 2>/dev/null || true\n\
 sleep 2\n\
 \n\
-# Test Suricata configuration one more time\n\
+# Test Suricata configuration\n\
 echo "Testing Suricata configuration..."\n\
 suricata -T -c /etc/suricata/suricata.yaml\n\
 if [ $? -ne 0 ]; then\n\
@@ -124,9 +152,9 @@ if [ $? -ne 0 ]; then\n\
 fi\n\
 echo "Suricata configuration OK"\n\
 \n\
-# Start supervisor\n\
+# Start supervisor to manage all services\n\
 echo "Starting services via supervisor..."\n\
-/usr/bin/supervisord -c /etc/supervisor/conf.d/supervisord.conf\n\
+exec /usr/bin/supervisord -c /etc/supervisor/conf.d/supervisord.conf\n\
 ' > /start.sh && chmod +x /start.sh
 
 EXPOSE 80
