--- a/demo/suricata-ids/Dockerfile
+++ b/demo/suricata-ids/Dockerfile
@@ -101,8 +101,10 @@ stderr_logfile=/var/log/suricata-stderr.log\n\
 RUN echo '#!/bin/bash\n\
 set -e\n\
 \n\
-echo "Starting Suricata IDS Container..."\n\
-echo "Suricata version: $(suricata --version)"\n\
+echo "========================================"\n\
+echo "Starting Suricata IDS Container"\n\
+echo "Suricata version: $(suricata -V 2>&1 | head -1)"\n\
+echo "========================================"\n\
 \n\
 # Initialize MySQL data directory if needed\n\
 if [ ! -d "/var/lib/mysql/mysql" ]; then\n\
@@ -110,25 +112,24 @@ if [ ! -d "/var/lib/mysql/mysql" ]; then\n\
     mysql_install_db --user=mysql --datadir=/var/lib/mysql\n\
 fi\n\
 \n\
-# Start MySQL directly\n\
-echo "Starting MySQL..."\n\
-mysqld_safe --user=mysql &\n\
+# Start MySQL temporarily to create database\n\
+echo "Starting MySQL for initial setup..."\n\
+mysqld --user=mysql --skip-networking &\n\
 MYSQL_PID=$!\n\
 \n\
 # Wait for MySQL to be ready\n\
-echo "Waiting for MySQL to be ready..."\n\
+echo "Waiting for MySQL..."\n\
 for i in {1..30}; do\n\
-    if mysqladmin ping -u root --silent 2>/dev/null; then\n\
+    if mysqladmin ping --socket=/var/run/mysqld/mysqld.sock 2>/dev/null; then\n\
         echo "MySQL is ready"\n\
         break\n\
     fi\n\
-    echo "Waiting for MySQL... ($i/30)"\n\
     sleep 1\n\
 done\n\
 \n\
 # Setup DVWA database\n\
 echo "Setting up DVWA database..."\n\
-mysql -u root << EOF\n\
+mysql --socket=/var/run/mysqld/mysqld.sock -u root <<EOF\n\
 CREATE DATABASE IF NOT EXISTS dvwa;\n\
 CREATE USER IF NOT EXISTS '"'"'dvwa'"'"'@'"'"'localhost'"'"' IDENTIFIED BY '"'"'password'"'"';\n\
 GRANT ALL PRIVILEGES ON dvwa.* TO '"'"'dvwa'"'"'@'"'"'localhost'"'"';\n\
@@ -137,24 +138,24 @@ EOF\n\
 \n\
 echo "Database setup complete"\n\
 \n\
-# Kill the temporary MySQL process\n\
-kill $MYSQL_PID\n\
-wait $MYSQL_PID 2>/dev/null || true\n\
-sleep 2\n\
+# Shutdown temporary MySQL\n\
+echo "Stopping temporary MySQL..."\n\
+mysqladmin --socket=/var/run/mysqld/mysqld.sock shutdown 2>/dev/null || kill $MYSQL_PID\n\
+sleep 3\n\
 \n\
 # Test Suricata configuration\n\
 echo "Testing Suricata configuration..."\n\
 suricata -T -c /etc/suricata/suricata.yaml\n\
 if [ $? -ne 0 ]; then\n\
     echo "ERROR: Suricata configuration test failed!"\n\
-    cat /var/log/suricata/suricata.log\n\
     exit 1\n\
 fi\n\
 echo "Suricata configuration OK"\n\
 \n\
-# Start supervisor to manage all services\n\
-echo "Starting services via supervisor..."\n\
-exec /usr/bin/supervisord -c /etc/supervisor/conf.d/supervisord.conf\n\
+# Start all services with supervisor\n\
+echo "Starting all services via supervisor..."\n\
+echo "========================================"\n\
+exec /usr/bin/supervisord -n -c /etc/supervisor/conf.d/supervisord.conf\n\
 ' > /start.sh && chmod +x /start.sh
 
 EXPOSE 80
