--- a/demo/suricata-ids/Dockerfile
+++ b/demo/suricata-ids/Dockerfile
@@ -168,8 +168,8 @@ if [ $? -ne 0 ]; then\n\
 fi\n\
 echo "Suricata configuration OK"\n\
 \n\
-# Create required directories for supervisor\n\
-mkdir -p /var/log/supervisor /var/run\n\
+# Create required directories for supervisor and Apache\n\
+mkdir -p /var/log/supervisor /var/run /var/run/apache2 /var/lock/apache2\n\
 \n\
 # Verify supervisor config exists\n\
 if [ ! -f /etc/supervisor/conf.d/supervisord.conf ]; then\n\
