--- a/demo/suricata-ids/Dockerfile
+++ b/demo/suricata-ids/Dockerfile
@@ -169,7 +169,8 @@ fi\n\
 echo "Suricata configuration OK"\n\
 \n\
 # Create required directories for supervisor and Apache\n\
-mkdir -p /var/log/supervisor /var/run /var/run/apache2 /var/lock/apache2\n\
+mkdir -p /var/log/supervisor /var/run /var/run/apache2 /var/lock/apache2 /var/log/apache2\n\
+chown -R www-data:www-data /var/run/apache2 /var/lock/apache2 /var/log/apache2\n\
 \n\
 # Verify supervisor config exists\n\
 if [ ! -f /etc/supervisor/conf.d/supervisord.conf ]; then\n\
